Fix maven build & deprecation warnings